2004-05-17  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/misc/action.py: no longer register actions as stock items.
	* gaphor/ui/menufactory.py: make accelerators work for menu items.

2004-05-13  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* data/pixmaps/extension24.png initalnode24.png,
	activityfinalnode24.png, activityfinalnode.xcf: added
	* gaphor/ui/stock.py: added the new icons as stock icons.
	* data/pixmaps/: removed unused (old) icons. Added icons for Actions,
	stereotype, extension, etc.
	

2004-05-12  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/extension.py: new file. Used to create stereotypes
	* gaphor/diagram/klass.py: started implementing stereotypes.
	* gaphor/diagram/dependency.py: Now one can add several dependency
	types, such as Usage and Realization (the dependency may not be
	connected on both sides for this option to work).

2004-05-10  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/dependency.py, generalization.py: fixed bug which
	avoids adding multiple dependencies/generalizations between two
	classes.
	* gaphor/ui/wrapbox.py: new file. replaces the C GtkWrapBox library.
	* gaphor/ui/stereotypewindow.py: new file. This dialog should be used
	to add/edit stereotypes.

2004-05-07  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/menufactory.py: reordered some code, added function
	create_button()

2004-05-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/properties.py: added upper, lower, _get, _set and _set2
	to redefine.

2004-04-27  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/placementtool.py: use new PlacementTool from
	diacanvas (CVS).
	* gaphor/diagram/itemtool.py: New file. Handles items the *new* way.
	* gaphor/diagram/klass.py: Added isAbstract handling.
	* gaphor/diagram/itemactions.py: added action for isAbstract.
	* gaphor/diagram/association.py: small updates.
	* gaphor/diagram/diagramitem.py: emit action on the main window
	if a subject is (un)set.